--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -100,7 +100,7 @@
 
                 <li class="nav-header">PROCESOS</li>
                 <li class="nav-item">
-                    <a href="@Url.Action("Calendar","Agenda")" class="nav-link">
+                    <a href="@Url.Action("Index","Calendario")" class="nav-link">
                         <i class="nav-icon far fa-calendar-alt"></i>
                         <p>
                             Gestión Agenda
