--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                             <i class="fas fa-bars"></i>
                         </button>
                         <div class="dropdown-menu" role="menu">
-                            <a href="#" class="dropdown-item">Ir a agenda</a>
+                            <a href="@Url.Action("Index","Calendario")" class="dropdown-item">Ir a Calendario</a>
                         </div>
                     </div>
                     <button type="button" class="btn btn-success btn-sm" data-card-widget="collapse">
