--- a/Web/Views/Calendario/Index.cshtml
+++ b/Web/Views/Calendario/Index.cshtml
@@ -373,14 +373,26 @@
             $('input').each(function () {
                 $(this).removeClass('is-invalid');
             })
-            //$('#txtSubject').removeClass('is-invalid');
+            $('#txtDescription').removeClass('is-invalid');
             if ($('#txtSubject').val().trim() == "") {
-                mensaje('warning', 'Debe ingresar un tema', true);
+                mensaje('warning', 'Debe ingresar un título', true);
+                $('#txtSubject').addClass('is-invalid');
+                $('#txtSubject').focus();
+                return;
+            }
+            if ($('#txtSubject').val().length > 200) {
+                mensaje('warning', 'El título debe ser menor a 200 caracteres', true);
                 $('#txtSubject').addClass('is-invalid');
                 $('#txtSubject').focus();
                 return;
             }
 
+            if ($('#txtDescription').val().length > 600) {
+                mensaje('warning', 'La descripción debe ser menor a 600 caracteres', true);
+                $('#txtDescription').addClass('is-invalid');
+                $('#txtDescription').focus();
+                return;
+            }
             if ($('#canciones').select2("val") == "") {
                 mensaje('warning', 'Debe ingresar al menos una canción', true);
                 $('#canciones').focus();
@@ -540,11 +552,12 @@
                         selectedEvent = calEvent;
                         $('#myModal #eventTitle').text(calEvent.title);
                         var $description = $('<div/>');
+                        $description.append($('<p/>').html('<b>Título:</b>    ' + calEvent.title));
                         $description.append($('<p/>').html('<b>Inicia:</b>    ' + calEvent.start.format("DD MMMM YYYY, HH:mm a")));
                         $description.append($('<p/>').html('<b>Finaliza:</b>    ' + calEvent.end.format("DD MMMM YYYY, HH:mm a")));
 
                         if (calEvent.description != null)
-                            $description.append($('<p/>').html('<b>Descripción:</b>' + calEvent.description));
+                            $description.append($('<p/ class="text-justify" style="height: 100px; overflow-y: scroll">').html('<b>Descripción:</b>' + calEvent.description));
                         else
                             $description.append($('<p/>').html('<b>Descripción:</b> Sin descripción'));
                         $description.append($('<p/>').html('<b>Canciones:</b>' + calEvent.canciones.map(function (data) { return data.Nombre })));
