--- a/Web/Views/RolServicio/Details.cshtml
+++ b/Web/Views/RolServicio/Details.cshtml
@@ -106,7 +106,7 @@
 
                     </div>
                 </div>
-                <div class="col-12 col-md-12 col-lg-4 order-1 order-md-2">
+                <div class="col-12 col-md-12 col-lg-4 order-1 order-md-2 text-justify">
                     <h3 class="text-primary"> @Html.DisplayNameFor(model => model.Descripcion)</h3>
                     <p class="text-muted"> @Html.DisplayFor(model => model.Descripcion)</p>
                     <br>
