--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -82,7 +82,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("Index","Cancion")" class="nav-link" id="menucancion">
                                 <i class="fas fa-file-audio nav-icon"></i>
                                 <p>Canciones</p>
                             </a>
