--- a/Web/Views/Cancion/Edit.cshtml
+++ b/Web/Views/Cancion/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Infraestructure.Models.Cancion
 
 @{
-    ViewBag.Title = "Nueva Canción";
+    ViewBag.Title = "Editar Canción";
 }
 <!-- Content Header (Page header) -->
 <div class="content-header">
@@ -14,7 +14,7 @@
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
                     <li class="breadcrumb-item"><a href="@Url.Action("Index","Cancion")">Canciones</a></li>
-                    <li class="breadcrumb-item active">Nuevo</li>
+                    <li class="breadcrumb-item active">Editar</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
@@ -22,14 +22,14 @@
 </div>
 
 
-@using (Html.BeginForm("Save", "Cancion",  FormMethod.Post))
+@using (Html.BeginForm("Save", "Cancion", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     <div class="card card-default mt-3">
         <div class="card-body p-3 col-md-12">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-      
+            @Html.HiddenFor(model => model.Id)
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success" >
                             @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
                             <label class="custom-control-label" for="customSwitch3">Estado</label>
                         </div>
@@ -81,7 +81,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Url_version, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Url_version, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Url_version, new { htmlAttributes = new { @class = "form-control"} })
                         @Html.ValidationMessageFor(model => model.Url_version, "", new { @class = "text-danger" })
 
                     </div>
@@ -116,5 +116,16 @@
 
         });
 
+    </script>
+
+    <script>
+        $('#checkEstado').change(function () {
+            var estado = $('#checkEstado').val();
+            debugger;
+            if (estado)
+                $('#indicaEstado').html = 'Activo'
+            else
+                $('#indicaEstado').text = 'Inactivo'
+        })
     </script>
 }
