--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -110,7 +110,7 @@
 
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="@Url.Action("Index","GestionCancion")" class="nav-link">
                         <i class="nav-icon fa fa-music"></i>
 
                         <p>
