--- a/Web/Views/Cancion/Details.cshtml
+++ b/Web/Views/Cancion/Details.cshtml
@@ -55,16 +55,8 @@
                     <div class="iframe-container">
                         <iframe width="560"
                                 height="315"
-                                src="@Html.DisplayNameFor(model => model.Url_version)"
-                                title="YouTube video player"
-                                frameborder="0"
-                                allow="accelerometer;
-                                autoplay;
-                                clipboard-write;
-                                encrypted-media;
-                                gyroscope;
-                                picture-in-picture"
-                                allowfullscreen>
+                                src="@Model.Url_version"
+                                frameborder="0">
                             Hubo un problema al cargar el video.
                         </iframe>
                         <p>Video de la versión.</p>
