--- a/Web/Views/Cancion/Details.cshtml
+++ b/Web/Views/Cancion/Details.cshtml
@@ -51,17 +51,25 @@
         <div class="card-body">
             <div class="row" >
                 <div class="col-12 col-md-12 col-lg-8 order-2 order-md-1">
-                  
-                    <div class="iframe-container">
-                        <iframe width="560"
-                                height="315"
-                                src="@Model.Url_version"
-                                frameborder="0">
-                            Hubo un problema al cargar el video.
-                        </iframe>
-                        <p>Video de la versión.</p>
-                    </div>
-                   
+
+                    @if (ViewBag.UrlFormat != "")
+                    {
+                        <div class="iframe-container">
+                            <iframe width="560"
+                                    height="315"
+                                    src="@ViewBag.UrlFormat"
+                                    frameborder="0">
+                                Hubo un problema al cargar el video.
+                            </iframe>
+                            <p>Video de la versión.</p>
+                        </div>
+                    }
+                    else
+                    {
+                        <span class="right badge badge-warning">No se ha ingresado un enlace para la versión.</span>
+                    }
+
+
 
                 </div>
                 <div class="col-12 col-md-12 col-lg-4 order-1 order-md-2 text-justify">
