--- a/Web/Views/Login/Index.cshtml
+++ b/Web/Views/Login/Index.cshtml
@@ -31,18 +31,11 @@
 
     </head>
     <body>
-        <!-- partial:index.partial.html -->
-        <!-- NORMALIZED CSS INSTALLED-->
-        <!-- View settings for more info.-->
         <div id="container">
             <div id="inviteContainer">
                 <div class="logoContainer">
                     <img src="~/Content/dist/img/logo nazareno full primary.png" />
-                    <img style="margin-top: 25px" class="logo" src="~/Content/dist/img/logo Naza music note full primary.png" />
-                    <!--
-                        <img class="text" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Discord_Color_Text_Logo_%282015-2021%29.svg/492px-Discord_Color_Text_Logo_%282015-2021%29.svg.png" />
-
-                    -->
+                    <h2 class="logo" style="color: #0069D9">Naza Musical Note</h2>
                 </div>
                 <div class="acceptContainer">
                     <form>
