--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -4,7 +4,10 @@
     ViewBag.Title = "Index";
 
 }
+@section Styles{
+    @Styles.Render("~/Content/datatable")
 
+}
 <head>
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="~/Content/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
@@ -15,7 +18,6 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Usuarios</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -48,14 +50,12 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.Nombre)
+                                        @Html.DisplayNameFor(model => model.Foto)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.Apellido_paterno)
+                                        @Html.DisplayNameFor(model => model.NombreCompleto)
                                     </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Apellido_materno)
-                                    </th>
+
                                     <th>
                                         @Html.DisplayNameFor(model => model.Estado)
                                     </th>
@@ -71,14 +71,20 @@
 
                                     <tr>
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.Nombre)
+                                            @if (item.Foto != null)
+                                            {
+                                                <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image">
+                                            }
+                                            else
+                                            {
+                                                <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
+                                            }
                                         </td>
+
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.Apellido_paterno)
+                                            @Html.DisplayFor(modelItem => item.NombreCompleto)
                                         </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Apellido_materno)
-                                        </td>
+
                                         <td class="text-center">
                                             @if (item.Estado)
                                             {
@@ -142,6 +148,7 @@
 
 
 @section scripts {
+    @Scripts.Render("~/bundles/datatable")
     <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
 
     <script>
