--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -200,7 +200,7 @@
                 </li>
                 <li class="nav-header">SEGURIDAD</li>
                 <li class="nav-item">
-                    <a href="@Url.Action("Index","Usuario")" class="nav-link">
+                    <a href="@Url.Action("Index","Usuario")" class="nav-link" id="menuusuarios">
                         <i class="nav-icon fas fa-users"></i>
                         <p>
                             Usuarios
