--- a/Web/Views/Usuario/Create.cshtml
+++ b/Web/Views/Usuario/Create.cshtml
@@ -22,7 +22,7 @@
 </div>
 
 
-@using (Html.BeginForm("Create", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("New", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -90,12 +90,6 @@
             </div>
         </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-8">
-                <input type="file" name="ImageFile" accept=".jpg,.jpeg,.png" />
-            </div>
-        </div>
 
         <div class="form-group row">
             @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
