--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -131,9 +131,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("Index","Puesto")" class="nav-link">
                                 <i class="fas fa-guitar nav-icon"></i>
-                                <p>Puestos de instrumentos</p>
+                                <p>Puestos</p>
                             </a>
                         </li>
 
