--- a/Web/Views/Puesto/Index.cshtml
+++ b/Web/Views/Puesto/Index.cshtml
@@ -8,6 +8,9 @@
     @Styles.Render("~/Content/datatable")
 
 }
+
+@{ Infraestructure.Models.Usuario UsuarioLogueado = (Infraestructure.Models.Usuario)Session["User"]; }
+
 <head>
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="~/Content/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
@@ -21,7 +24,7 @@
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
+                    <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")">Inicio</a></li>
                     <li class="breadcrumb-item active">Puestos</li>
                 </ol>
             </div><!-- /.col -->
@@ -29,13 +32,18 @@
     </div><!-- /.container-fluid -->
 </div>
 
+@{
+    if (UsuarioLogueado.Rol.Descripcion != "Integrante")
+    {
+        <p>
+            <a class="btn btn-primary" href="@Url.Action("Create","Puesto")">
+                <i class="fa fa-plus"></i>
+                Nuevo Puesto
+            </a>
+        </p>
+    }
+}
 
-<p>
-    <a class="btn btn-primary" href="@Url.Action("Create","Puesto")">
-        <i class="fa fa-plus"></i>
-        Nuevo Puesto
-    </a>
-</p>
 
 
 <div id="#mensaje"></div>
@@ -62,69 +70,80 @@
                                 @foreach (var item in Model)
                                 {
 
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Descripcion)
-                                    </td>
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Descripcion)
+                                        </td>
 
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Categoria.Descripcion)
-                                    </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Categoria.Descripcion)
+                                        </td>
 
-                                    <td class="text-center ">
-                                        <ul style="display:flex; list-style:none">
-                                            <li>
-                                                <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Puesto", new { id = item.Id })">
-                                                    <i class="fas fa-eye">
-                                                    </i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Puesto", new { id = item.Id })">
-                                                    <i class="fas fa-user-edit">
-                                                    </i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
-                                                    <i class="fas fa-trash">
-                                                    </i>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                                }
-                            </tbody>
-                        </table>
+                                        <td class="text-center ">
+                                            <ul style="display:flex; list-style:none">
+                                                <li>
+                                                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Puesto", new { id = item.Id })">
+                                                        <i class="fas fa-eye">
+                                                        </i>
+                                                    </a>
+                                                </li>
+                                                @{
+                                                    if (UsuarioLogueado.Rol.Descripcion != "Integrante")
+                                                    {
+                                                        <li>
+                                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Puesto", new { id = item.Id })">
+                                                                <i class="fas fa-edit">
+                                                                </i>
+                                                            </a>
+                                                        </li>
+                                                        }
+                                                    }
+
+                                                    @{
+                                                        if (UsuarioLogueado.Rol.Descripcion != "Integrante")
+                                                        {
+                                                            <li>
+                                                                <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
+                                                                    <i class="fas fa-trash">
+                                                                    </i>
+                                                                </a>
+                                                            </li>
+                                                        }
+                                                    }
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                                }
+                                            </tbody>
+                                        </table>
 
 
 
-                        <input type="hidden" id="campoOculto" />
+                                        <input type="hidden" id="campoOculto" />
 
 
 
+                                    </div>
+                                    <!-- /.card-body -->
+                                </div>
+                                <!-- /.card -->
+                            </div>
+                            <!-- /.col -->
+                        </div>
+                        <!-- /.row -->
                     </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-            </div>
-            <!-- /.col -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-</section>
-<!-- /.content -->
+                    <!-- /.container-fluid -->
+                </section>
+                <!-- /.content -->
 
-<input type="hidden" id="campoOculto" />
+                <input type="hidden" id="campoOculto" />
 
 
-@section scripts {
-    @Scripts.Render("~/bundles/datatable")
-    <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
+                @section scripts {
+                    @Scripts.Render("~/bundles/datatable")
+                    <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
 
-    <script>
+                    <script>
     // Habilita los tooltips
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
@@ -132,153 +151,150 @@
 
     $(document).ready(function () {
 
-        var option = '@TempData["Action"]'
+        // Recibe los parámetros del Controller
+                var option = '@TempData["Action"]'
+                var message = '@TempData["MessageError"]'
 
-        if (option == 'S') {
-            //alert("Hola")
-            Swal.fire("Éxito", "¡Usuario creado correctamente!", "success");
+
+
+                if (option == 'S') {
+                    Swal.fire('Éxito!',
+                        'El puesto fue creado correctamente.',
+                        'success');
+                }
+
+
+                 if (option == 'D') {
+                     Swal.fire('Éxito!',
+                         'El puesto fue borrado correctamente.',
+                         'success');
+                }
+
+
+                 if (option == 'U') {
+                     Swal.fire('Éxito!',
+                         'El puesto fue actualizado correctamente.',
+                         'success');
+                }
+
+            if (option == 'E') {
+                Swal.fire('Error!',
+                    'Se ha producido un error: '+ message,
+                    'error');
             }
 
-        if (option == 'E') {
-            Swal.fire("Disculpe", "Hubo un error al crear el Usuario", "error");
-        }
-
-        if (option == 'X') {
-            Swal.fire("Disculpe", "Hubo un error al editar el Usuario", "error");
-        }
-
-        if (option == 'V') {
-            Swal.fire("Éxito", "¡Usuario editado correctamente!", "success");
-        }
-
-        if (option == 'T') {
-            Swal.fire("Éxito", "¡Usuario eliminado correctamente!", "success");
-        }
-
-        if (option == 'N') {
-            Swal.fire("Disculpe", "Hubo un error al eliminar el Usuario", "error");
-        }
-
-        if (option == 'J') {
-            Swal.fire("Disculpe", "No se puede eliminar el usuario debido a que la sesión se encuentra activa actualmente", "warning");
-        }
-
-        if (option == 'C') {
-            Swal.fire("Disculpe", "Hubo un error al enviar el correo electrónico de primer ingreso al Usuario creado, por ende, el Usuario no se guardará en la base de datos del sistema", "error");
-        }
-
     });
-    </script>
+                    </script>
 
-    <script>
-        $(function () {
-            $("#example1").DataTable({
-                "language": {
-                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-                },
-                dom: 'Bfrtip',
-                //poner clase notexport a la columnas que no queremos en las exportaciones
-                buttons: [
-                    {
-                        extend: 'copy',
-                        text: 'Copiar',
-                        className: 'btn btn-default',
-                        exportOptions: {
-                            columns: ':not(.notexport)'
+                    <script>
+                        $(function () {
+                            $("#example1").DataTable({
+                                "language": {
+                                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+                                },
+                                dom: 'Bfrtip',
+                                //poner clase notexport a la columnas que no queremos en las exportaciones
+                                buttons: [
+                                    {
+                                        extend: 'copy',
+                                        text: 'Copiar',
+                                        className: 'btn btn-default',
+                                        exportOptions: {
+                                            columns: ':not(.notexport)'
+                                        }
+                                    },
+                                    {
+                                        extend: 'csv',
+                                        text: 'CSV',
+                                        className: 'btn btn-default',
+                                        exportOptions: {
+                                            columns: ':not(.notexport)'
+                                        }
+                                    },
+                                    {
+                                        extend: 'excel',
+                                        text: 'Excel',
+                                        className: 'btn btn-default',
+                                        exportOptions: {
+                                            columns: ':not(.notexport)'
+                                        }
+                                    },
+                                    {
+                                        extend: 'pdf',
+                                        text: 'PDF',
+                                        className: 'btn btn-default',
+                                        exportOptions: {
+                                            columns: ':not(.notexport)'
+                                        }
+                                    },
+                                    {
+                                        extend: 'print',
+                                        text: 'Imprimir',
+                                        className: 'btn btn-default',
+                                        exportOptions: {
+                                            columns: ':not(.notexport)'
+                                        }
+                                    }
+
+                                ],
+
+                                "responsive": true, "lengthChange": false, "autoWidth": false,
+
+
+                            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+
+                        });
+                    </script>
+
+                    <script>
+
+                        //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
+                        $(document).ready(function () {
+                            $("#menuusuarios").addClass('active');
+                        });
+
+                    </script>
+
+                    <script>
+                        function eliminar(id) {
+                            Swal.fire({
+                                title: 'Estás seguro?',
+                                text: "No podrás revertirlo!",
+                                icon: 'warning',
+                                showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'Sí, bórralo!',
+                                cancelButtonText: 'Cancelar'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    $.ajax({
+                                        type: "POST",
+                                        url: '/Puesto/Delete',
+                                        data: { 'id': id },
+                                        success: function (data) {
+
+                                            location.reload();
+                                        },
+                                        error: function (xhr, status, error) {
+                                            location.reload();
+                                        }
+                                    })
+
+
+                                }
+                            })
                         }
-                    },
-                    {
-                        extend: 'csv',
-                        text: 'CSV',
-                        className: 'btn btn-default',
-                        exportOptions: {
-                            columns: ':not(.notexport)'
+
+                    </script>
+
+                    <script>
+                        function desactivarBotonEliminar() {
+                            document.getElementById("botonEliminar").setAttribute("disabled", "false");
                         }
-                    },
-                    {
-                        extend: 'excel',
-                        text: 'Excel',
-                        className: 'btn btn-default',
-                        exportOptions: {
-                            columns: ':not(.notexport)'
+
+                        function activarBotonEliminar() {
+                            document.getElementById("botonEliminar").setAttribute("disabled", "true");
                         }
-                    },
-                    {
-                        extend: 'pdf',
-                        text: 'PDF',
-                        className: 'btn btn-default',
-                        exportOptions: {
-                            columns: ':not(.notexport)'
-                        }
-                    },
-                    {
-                        extend: 'print',
-                        text: 'Imprimir',
-                        className: 'btn btn-default',
-                        exportOptions: {
-                            columns: ':not(.notexport)'
-                        }
-                    }
-
-                ],
-
-                "responsive": true, "lengthChange": false, "autoWidth": false,
-
-
-            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-
-        });
-    </script>
-
-    <script>
-
-        //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
-        $(document).ready(function () {
-            $("#menuusuarios").addClass('active');
-        });
-
-    </script>
-
-    <script>
-        function eliminar(id) {
-            Swal.fire({
-                title: 'Estás seguro?',
-                text: "No podrás revertirlo!",
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, bórralo!',
-                cancelButtonText: 'Cancelar'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        type: "POST",
-                        url: '/Puesto/Delete',
-                        data: { 'id': id },
-                        success: function (data) {
-
-                            location.reload();
-                        },
-                        error: function (xhr, status, error) {
-                            location.reload();
-                        }
-                    })
-
-
+                    </script>
                 }
-            })
-        }
-
-    </script>
-
-    <script>
-        function desactivarBotonEliminar() {
-            document.getElementById("botonEliminar").setAttribute("disabled", "false");
-        }
-
-        function activarBotonEliminar() {
-            document.getElementById("botonEliminar").setAttribute("disabled", "true");
-        }
-    </script>
-}
